--- a/assets/scss/_pitch.scss
+++ b/assets/scss/_pitch.scss
@@ -1,4 +1,7 @@
-
+.row {
+  margin-left:0px;
+  margin-right:0px;
+}
 .process {
   @media #{$break-lg} {
     height: 100vh;
@@ -70,11 +73,11 @@
     }
     .bg3 {
       top: 5vw;
-      right: 15vw;
+      right: 20vw;
     }
     .bg4 {
       top: 40vw;
-      right: -1vw;
+      right: 3vw;
     }
     background: linear-gradient(to bottom, rgba(81, 189, 211, 1.0) 0%, rgba(60, 129, 147, 1.0) 100%);
     h2 { color: #fff; }
